--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+Mono">
+
 
     <style>
+        .outercontainer {
+            padding-top: 1em;
+            padding-bottom: 1em;
+        }
+
         .loader {
             aspect-ratio: 1;
             scale: 2;
@@ -43,6 +50,14 @@
             margin: 0 auto;
             pointer-events: all;
         }
+
+        .mono {
+            font-family: 'Noto Sans Mono', monospace;
+        }
+
+        .text-disable {
+            color: gray;
+        }
     </style>
 
     <script type="text/javascript">
@@ -69,6 +84,168 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid outercontainer">
+        <div class="row">
+            <div class="col-md-6">
+                <form role="form">
+                    <div class="form-group">
+                        <label class="form-label">
+                            Enter ATR in hexadecimal:
+                        </label>
+                        <div class="mb-3">
+                            <input type="text" class="form-control mono" id="hextext" py-input="validate_text" data-toggle="tooltip" title="Red means invalid hex. Yellow means decode error." value="deadbeedcafebabe1234567890">
+                        </div>
+                        <div class="row mb-3 align-items-center g-3">
+                            <div class="col-auto ">
+                                <div class="form-check">
+                                    <input type="checkbox" aria-hidden="true" style="visibility: hidden;" class="form-check-input">
+                                    <label for="bitorder" class="form-check-label">Bit order:</label>
+                                </div>
+                            </div>
+                            <div class="col-auto">
+                                <select id="bitorder" class="form-select">
+                                    <option value="normal">Standard (LSB-first)</option>
+                                    <option value="reverse">Inverse (MSB-first)</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row mb-3 align-items-center g-3">
+                            <div class="col-auto">
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="params_active">
+                                    <label for="params_active" class="form-check-label ">Set params:</label>
+                                </div>
+                            </div>
+                            <div class="col-auto">
+                                <select id="params_Fi" class="form-select">
+                                </select>
+                            </div>
+                            <div class="col-auto">
+                                <select id="params_Di" class="form-select">
+                                </select>
+                            </div>
+                            <div class="col-auto">
+                                <label class="form-check-label" id="baud_text"></label>
+                            </div>
+                        </div>
+                        <div class="row mb-3 align-items-center g-3">
+                            <div class="col-auto">
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="egt_active">
+                                    <label for="egt_active" class="form-check-label ">Extra guard time:</label>
+                                </div>
+                            </div>
+                            <div class="col-auto">
+                                <input type="number" id="egt" value="0" min="0" max="255" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-1 align-items-center g-3">
+                            <div class="col-auto">
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="negotiate_mode_active">
+                                    <label for="negotiate_mode_active" class="form-check-label ">Able to negotiate mode</label>
+                                </div>
+                            </div>
+                            <div class="col-auto">
+                                <select id="negotiate_mode" class="form-select">
+                                    <option value="false">NO</option>
+                                    <option value="true">YES</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row mb-1 align-items-center g-3">
+                            <div class="col-auto">
+                                <div class="form-check">
+                                    <input type="checkbox" aria-hidden="true" style="visibility: hidden;" class="form-check-input" id="use_speed_param_active">
+                                    <label for="negotiate_mode_active" class="form-check-label">Use above speed parameters</label>
+                                </div>
+                            </div>
+                            <div class="col-auto">
+                                <select id="use_speed_param" class="form-select">
+                                    <option value="true">YES</option>
+                                    <option value="false">NO</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row mb-3 align-items-center g-1">
+                            <div class="col-auto ">
+                                <div class="form-check">
+                                    <input type="checkbox" aria-hidden="true" style="visibility: hidden;" class="form-check-input" id="preferred_proto_active">
+                                    <label for="negotiate_mode_active" class="form-check-label">Preferred proto T=</label>
+                                </div>
+                            </div>
+                            <div class="col-auto">
+                                <select id="preferred_proto" class="form-select" style="padding-left: 5px">
+                                    <option value="1">1</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="row mb-1 align-items-center g-3">
+                            <div class="col-auto">
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="clockstop_active">
+                                    <label for="clockstop_active" class="form-check-label">Clock stop</label>
+                                </div>
+                            </div>
+                            <div class="col-auto">
+                                <select id="clockstop" class="form-select">
+                                    <option value="none">N/A</option>
+                                    <option value="high">High</option>
+                                    <option value="low">Low</option>
+                                    <option value="either">Either</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row mb-3 align-items-center">
+                            <div class="col-auto ">
+                                <div class="form-check">
+                                    <input type="checkbox" aria-hidden="true" style="visibility: hidden;" class="form-check-input" id="class_active">
+                                    <label for="clockstop_active" class="form-check-label">Class</label>
+                                </div>
+                            </div>
+                            <div class="col-auto">
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="class_a_enable">
+                                    <label for="class_a_enable" class="form-check-label">A(5V)</label>
+                                </div>
+                            </div>
+                            <div class="col-auto">
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="class_b_enable">
+                                    <label for="class_b_enable" class="form-check-label">B(3V)</label>
+                                </div>
+                            </div>
+                            <div class="col-auto">
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="class_c_enable">
+                                    <label for="class_c_enable" class="form-check-label">C(1.8V)</label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row mb-3 align-items-center g-3">
+                            <div class="col-auto">
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="hist_active">
+                                    <label for="hist_active" class="form-check-label ">Historical bytes:</label>
+                                </div>
+                            </div>
+                            <div class="col-auto">
+                                <input type="text" class="form-control mono" id="histtext" maxlength="32" value="deadbeedcafebabe1234567890">
+                            </div>
+                        </div>
+
+                    </div>
+                </form>
+                <!-- !temporary! -->
+                <button class="btn btn-block btn-primary" py-click="process_btn">
+                    Process
+                </button>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
