--- a/index.html
+++ b/index.html
@@ -243,6 +243,42 @@
                     Process
                 </button>
             </div>
+            <div class="col-md-6">
+                <form role="form">
+                    <label class="form-label">
+                        Supported protocols
+                    </label>
+                    <div class="row mb-1 align-items-center g-3">
+                        <div class="col-auto">
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" id="Teq0_check">
+                                <label for="Teq0_check" class="form-check-label">T=0</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row-cols-1 collapse mb-3" id="Teq0_collapse">
+                        <div class="card card-body">
+                            Some placeholder content for the collapse component. This panel is hidden by default but
+                            revealed when the user activates the relevant trigger.
+                        </div>
+                    </div>
+
+                    <div class="row mb-1 align-items-center g-3">
+                        <div class="col-auto">
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" id="Teq1_check">
+                                <label for="Teq1_check" class="form-check-label">T=1</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row-cols-1 collapse mb-3" id="Teq1_collapse">
+                        <div class="card card-body">
+                            Some placeholder content for the collapse component. This panel is hidden by default but
+                            revealed when the user activates the relevant trigger.
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 
