Update index.html with minimal valid ATR

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             Enter ATR in hexadecimal:
                         </label>
                         <div class="mb-3">
-                            <input type="text" class="form-control mono" id="hextext" py-input="validate_text" data-toggle="tooltip" title="Red means invalid hex. Yellow means decode error." value="deadbeedcafebabe1234567890">
+                            <input type="text" class="form-control mono" id="hextext" py-input="validate_text" data-toggle="tooltip" title="Red means invalid hex. Yellow means decode error." value="3b0000">
                         </div>
                         <div class="row mb-3 align-items-center g-3">
                             <div class="col-auto ">
