Add T=0 protocol parameters

--- a/index.html
+++ b/index.html
@@ -262,8 +262,17 @@
                     </div>
                     <div class="row-cols-1 collapse mb-3" id="Teq0_collapse">
                         <div class="card card-body">
-                            Some placeholder content for the collapse component. This panel is hidden by default but
-                            revealed when the user activates the relevant trigger.
+                            <div class="row mb-3 align-items-center g-3">
+                                <div class="col-auto">
+                                    <div class="form-check">
+                                        <input type="checkbox" class="form-check-input" id="Teq0_wti_active">
+                                        <label for="Teq0_wti_active" class="form-check-label ">Waiting time integer:</label>
+                                    </div>
+                                </div>
+                                <div class="col-auto">
+                                    <input type="number" id="Teq0_wti" value="1"0 min="1" max="255" class="form-control">
+                                </div>
+                            </div>
                         </div>
                     </div>
 
