--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+Mono">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+Mono">
 
 
     <style>
@@ -97,7 +97,7 @@
                             Enter ATR in hexadecimal:
                         </label>
                         <div class="mb-3">
-                            <input type="text" class="form-control mono" id="hextext" py-input="validate_text" data-toggle="tooltip" title="Red means invalid hex. Yellow means decode error." value="3b0000">
+                            <input type="text" class="form-control mono" id="hextext" py-input="validate_text" data-toggle="tooltip" title="Red means invalid hex. Yellow means decode error." value="3b800080">
                         </div>
                         <div class="row mb-3 align-items-center g-3">
                             <div class="col-auto ">
